
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity">

    <!-- Login progress -->




    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/take_attendance_title"
            android:textColor="@color/loginTitle"
            android:textSize="30dp"
            android:id="@+id/LoginTitle"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearance"
            android:text="@string/classentries_prompt"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:id="@+id/txtclasstitle"
            android:paddingLeft="07dp" />


        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerClass"
            android:prompt="@string/classentries_prompt"
            android:entries="@array/classentries_array"
            android:layout_marginTop="05dp"
            android:spinnerMode="dialog"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearance"
            android:text="Select Subject"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:id="@+id/txtsubtitle"
            android:paddingLeft="07dp" />


        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerSubject"

            android:layout_marginTop="05dp"
            android:spinnerMode="dialog"
            android:layout_marginBottom="15dp"
            />




        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/datepick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/take_attendance_date"
                android:inputType="date"
                android:maxLines="1"
                android:textColor="#000000"
                android:singleLine="true"
                android:enabled="false"
                />

        </android.support.design.widget.TextInputLayout>




        <Button
            android:id="@+id/start_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/take_attendance_button"
            android:textStyle="bold"

            />

    </LinearLayout>





</LinearLayout>